--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Give a title to a webpage -->
     <title>23FA-ITSE2302</title>
-    <script src="js/script.js" defer></script>
+    <!-- <script src="js/script.js" defer></script> -->
+
+    <!-- Link a JavaScript File -->
+    <script src="js/stringsOperatorsLoops.js" defer></script>
+
+    <!-- Link a CSS file -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Make an unordered list for navigation bar -->
     <ul>
+        <!-- Each entry contains a HyperLink -->
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">Video</a></li>
         <li><a href="#">Gallery</a></li>
@@ -14,7 +22,25 @@
     </ul>
 
 
-    <img src="images/ac6.png" alt="Italian Trulli">
+    <div class="container">
+        <!-- Add an image that spans completely hortizontally-->
+        <img src="images/ac6.png" alt="Snow" style="width:100%;">
+        <div class="bottom-left">
+            <!-- Add a paragraph -->
+            <p>In ARMORED CORE VI FIRES OF RUBICON, players will assemble<br> 
+            their mech from a wide variety of parts and weaponry<br> 
+            to soar freely through mission locales that redefine<br> 
+            three-dimensional mobility. Face down overwhelming <br>
+            opposition by outgunning and overrunning your enemies<br>
+            with dynamic movement that makes full use of ranged <br>
+            and melee combat. Players can experience frenetic <br>
+            and fast-paced action that can only be truly achieved <br>
+            with mechs.
+        </p>
+        </div>  
+        
+              
+    </div>
 
 </body>
 </html>
