--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <!-- <script src="js/script.js" defer></script> -->
 
     <!-- Link a JavaScript File -->
-    <script src="js/stringsOperatorsLoops.js" defer></script>
+    <!-- <script src="js/stringsOperatorsLoops.js" defer></script> -->
+
+    <!-- Link a JavaScript File -->
+    <script src="js/evenOrOdd.js" defer></script>
 
     <!-- Link a CSS file -->
     <link rel="stylesheet" href="css/style.css">
