--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">Video</a></li>
         <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contactUs.html">Contact</a></li>
     </ul>
 
 
