--- a/contactUs.html
+++ b/contactUs.html
@@ -33,7 +33,7 @@
         <img src="images/ac6.png" alt="Snow" style="width:100%;">
         <div class="form-position">
             <!-- Make a form -->
-            <form id="form">
+            <form id="form" class="form_class">
 
                 <!-- Make an input field for first name -->
                 <label>First Name:</label>
@@ -44,7 +44,7 @@
                 <input type="text" id="ln" name="last-name"><br><br>
 
                 <!-- Make radio buttons for gender -->
-                <label>Gender:</label>
+                <label class="Blue-Font-Color">Gender:</label>
                 <input type="radio" name="gender" id="male" value="male" checked>
                 <label>Male</label>
 
@@ -61,13 +61,13 @@
                 
                 <!-- Make checkboxes to select platforms -->
                 <input type="checkbox" id="pc" name="PC" value="60">
-                <label>PC</label><br>
+                <label>PC($60)</label><br>
 
                 <input type="checkbox" id="ps" name="Playstation 5" value="70">
-                <label>Playstation 5</label><br>
+                <label>Playstation 5($70)</label><br>
 
                 <input type="checkbox" id="xbox" name="X-Box Series X" value="80">
-                <label>X-Box Series X</label><br>
+                <label>X-Box Series X($80)</label><br>
 
                 <!-- Make a message box area -->
                 <label >Message:</label><br>
