--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="#">Video</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="contactUs.html">Contact</a></li>
+        <li><a href="manipulatingDOM.html" class="modulesix">Module 6</a></li>
     </ul>
 
 
